# friday-teaming-6

./: Pipfile  README.md  character.py  pipfile  pyproject.toml
test/: test_character.py
